--- a/C++11/C++11新特性.md
+++ b/C++11/C++11新特性.md
@@ -1,9 +1,10 @@
 # C++11新特性
 
 - [C++11新特性](#c11新特性)
-  - [1.1 原始字面量](#11-原始字面量)
+  - [1. 原始字面量](#1-原始字面量)
+  - [2. long long整型](#2-long-long整型)
 
-## 1.1 原始字面量
+## 1. 原始字面量
 
 在C++11中添加了定义原始字符串的字面量，定义方式为：`R"xxx(原始字符串)xxx"`其中`()`两边的字符串可以省略。原始字面量R可以直接表示字符串的实际含义，而不需要额外对字符串做**转义**或**连接**等操作。
 
@@ -11,3 +12,45 @@
 > 2. 在C++11之前如果一个字符串分别写到了不同的行里边，需要加连接符，这种方式不仅繁琐，还破坏了表达式的原始含义，如果使用原始字面量就变得简单很多，很强直观，可读性强。
 
 使用原始字面量`R "xxx(raw string)xxx"`，原始字符串必须用括号`（）`括起来，`（）`两边的字符串在解析的时候是会被**忽略**的，因此一般不用指定。如果在`（）`前后指定了字符串，那么前后的字符串**必须相同**，否则会出现语法错误。
+
+## 2. long long整型
+
+C++11 标准要求 `long long` 整型可以在不同平台上有不同的长度，但至少有64位。long long 整型有两种∶
+`long long` - 对应类型的数值可以使用 `LL` (大写) 或者 `ll` (小写) 后缀。
+`unsigned long long` - 对应类型的数值可以使用 `ULL` (大写) 或者 `ull` (小写) 或者 `Ull`、`uLL` (等大小写混合)后缀。
+
+对于有符号类型的 long long和以下三种类型等价
+`long long int`
+`signed long long`
+`signed long long int`
+对于无符号类型的`unsigned long long`和`unsigned long long int`是等价的
+同其他的整型一样，要了解平台上`long long`大小的方法就是查看`<climits>`（或`<limits. h>`）中的宏与long long整 型相关的一共有3个：
+`LLONG_MIN` - 最小的`long long`值
+`LLONG_MAX` - 最大的`long long`值
+`ULLONG MAX` - 最大的`unsigned long long`值
+
+`long long` 类型能够存储的最大/最小值还是非常大/小的，但是这个值根据平台不同会有所变化，原因是因为C++11标准规定该类型至少占8字节，它占的字节数越多，对应能够存储的数值也就越大。
+
+在C++11中一共只定义了以下5种标准的有符号整型：
+
+```C++
+signed char
+short int
+int
+long int
+long long int
+```
+
+标准同时规定，每一种有符号整型都有一种对应的无符号整数版本，且有符号整型与其对应的无符号整型具有相同的存储空间大小。比如与`signed int`对应的无符号版本的整型是 `unsigned int`。
+
+>
+> 当我们在C++中处理数据的时候，如果参与运算的数据或者传递的参数类型不匹配，整型间会发生隐式的转换，这种过程通常被称为整型的提升。比如如下表达式∶
+`(int)num1 + (long long)num2`
+> 关于这种整形提升的隐式转换遵循如下原则:
+>
+> 1. 长度越大的整型等级越高，比如 `long long int` 的等级会高于int。
+> 2. 长度相同的情况下，标准整型的等级高于扩展类型，比如 `long long int` 和 `int64` 如果都是64位长度，则`long long int`类型的等级更高。
+> 3. 相同大小的有符号类型和无符号类型的等级相同，`long long int`和`unsigned longlong int`的等级就相同。
+>
+
+**转换过程中，低等级整型需要转换为高等级整型，有符号的需要转换为无符号整形。**
