--- a/C++11/C++11新特性.md
+++ b/C++11/C++11新特性.md
@@ -3,6 +3,7 @@
 - [C++11新特性](#c11新特性)
   - [1. 原始字面量](#1-原始字面量)
   - [2. long long整型](#2-long-long整型)
+  - [3. 类成员的快速初始化](#3-类成员的快速初始化)
 
 ## 1. 原始字面量
 
@@ -11,7 +12,7 @@
 > 1. 编程过程中，使用的字符串中常带有一些特殊字符，对于这些字符往往要做专门的处理，使用了原始字面量就可以轻松的解决这个问题了，比如打印路径。
 > 2. 在C++11之前如果一个字符串分别写到了不同的行里边，需要加连接符，这种方式不仅繁琐，还破坏了表达式的原始含义，如果使用原始字面量就变得简单很多，很强直观，可读性强。
 
-使用原始字面量`R "xxx(raw string)xxx"`，原始字符串必须用括号`（）`括起来，`（）`两边的字符串在解析的时候是会被**忽略**的，因此一般不用指定。如果在`（）`前后指定了字符串，那么前后的字符串**必须相同**，否则会出现语法错误。
+使用原始字面量`R"xxx(raw string)xxx"`，原始字符串必须用括号`（）`括起来，`（）`两边的字符串在解析的时候是会被**忽略**的，因此一般不用指定。如果在`（）`前后指定了字符串，那么前后的字符串**必须相同**，否则会出现语法错误。
 
 ## 2. long long整型
 
@@ -54,3 +55,11 @@ long long int
 >
 
 **转换过程中，低等级整型需要转换为高等级整型，有符号的需要转换为无符号整形。**
+
+## 3. 类成员的快速初始化
+
+在C++98中，支持了在类声明中使用**等号 `=` 加初始值** 的方式，来初始化类中**静态成员常量** 。这种声明方式我们也称之为“就地”声明。而**非静态成员变量的初始化则必须在构造函数中进行**。如果使用花括号`{}`的方式对类的非静态成员进行初始化，等号是可以省略不写的。另外，在类内部是不能使用构造函数的方式对类成员对象进行实例化的，即不能使用`()`进行类内对象初始化。
+
+在进行类成员变量初始化的时候，C++11标准对于C++98做了补充，<u>允许在定义类的时候在类内部直接对非静态成员变量进行初始化，在初始化的时候可以使用等号`=`也可以使用花括号`{}`</u> 。
+
+在C++11之前对于非静态的类成员变量我们除了在构造函数内部进行赋值，也可以在类的初始化列表中进行初始化（这种方式比在构造函数内部赋值效率高）。同时在类内部对非静态成员变量就地初始化和在初始化列表中进行初始化，两者并不冲突（程序可以正常运行）。程序员可以为同一成员变量既在类内部就地初始化，又在初始化列表中进行初始化，只不过初始化列表总是看起来后作用于非静态成员。也就是说，通过初始化列表指定的值会覆盖就地初始化时指定的值。
