--- a/C++11/C++11新特性.md
+++ b/C++11/C++11新特性.md
@@ -5,7 +5,7 @@
   - [2. long long整型](#2-long-long整型)
   - [3. 类成员的快速初始化](#3-类成员的快速初始化)
 
-## 1. 原始字面量
+### 1. 原始字面量
 
 在C++11中添加了定义原始字符串的字面量，定义方式为：`R"xxx(原始字符串)xxx"`其中`()`两边的字符串可以省略。原始字面量R可以直接表示字符串的实际含义，而不需要额外对字符串做**转义**或**连接**等操作。
 
@@ -14,7 +14,7 @@
 
 使用原始字面量`R"xxx(raw string)xxx"`，原始字符串必须用括号`（）`括起来，`（）`两边的字符串在解析的时候是会被**忽略**的，因此一般不用指定。如果在`（）`前后指定了字符串，那么前后的字符串**必须相同**，否则会出现语法错误。
 
-## 2. long long整型
+### 2. long long整型
 
 C++11 标准要求 `long long` 整型可以在不同平台上有不同的长度，但至少有64位。long long 整型有两种∶
 `long long` - 对应类型的数值可以使用 `LL` (大写) 或者 `ll` (小写) 后缀。
@@ -44,7 +44,6 @@ long long int
 
 标准同时规定，每一种有符号整型都有一种对应的无符号整数版本，且有符号整型与其对应的无符号整型具有相同的存储空间大小。比如与`signed int`对应的无符号版本的整型是 `unsigned int`。
 
->
 > 当我们在C++中处理数据的时候，如果参与运算的数据或者传递的参数类型不匹配，整型间会发生隐式的转换，这种过程通常被称为整型的提升。比如如下表达式∶
 `(int)num1 + (long long)num2`
 > 关于这种整形提升的隐式转换遵循如下原则:
@@ -52,14 +51,16 @@ long long int
 > 1. 长度越大的整型等级越高，比如 `long long int` 的等级会高于int。
 > 2. 长度相同的情况下，标准整型的等级高于扩展类型，比如 `long long int` 和 `int64` 如果都是64位长度，则`long long int`类型的等级更高。
 > 3. 相同大小的有符号类型和无符号类型的等级相同，`long long int`和`unsigned longlong int`的等级就相同。
->
 
 **转换过程中，低等级整型需要转换为高等级整型，有符号的需要转换为无符号整形。**
 
-## 3. 类成员的快速初始化
+### 3. 类成员的快速初始化
 
 在C++98中，支持了在类声明中使用**等号 `=` 加初始值** 的方式，来初始化类中**静态成员常量** 。这种声明方式我们也称之为“就地”声明。而**非静态成员变量的初始化则必须在构造函数中进行**。如果使用花括号`{}`的方式对类的非静态成员进行初始化，等号是可以省略不写的。另外，在类内部是不能使用构造函数的方式对类成员对象进行实例化的，即不能使用`()`进行类内对象初始化。
 
 在进行类成员变量初始化的时候，C++11标准对于C++98做了补充，<u>允许在定义类的时候在类内部直接对非静态成员变量进行初始化，在初始化的时候可以使用等号`=`也可以使用花括号`{}`</u> 。
 
 在C++11之前对于非静态的类成员变量我们除了在构造函数内部进行赋值，也可以在类的初始化列表中进行初始化（这种方式比在构造函数内部赋值效率高）。同时在类内部对非静态成员变量就地初始化和在初始化列表中进行初始化，两者并不冲突（程序可以正常运行）。程序员可以为同一成员变量既在类内部就地初始化，又在初始化列表中进行初始化，只不过初始化列表总是看起来后作用于非静态成员。也就是说，通过初始化列表指定的值会覆盖就地初始化时指定的值。
+
+
+### 可调用对象
